#31 Fix alt-test overflow

--- a/public/css/smilies.styl
+++ b/public/css/smilies.styl
@@ -6,6 +6,7 @@
 	size(16px, 16px)
 	rel(1px, 0)
 	color transparent
+	white-space nowrap
 
 i.happy
 	@extend .smiley
